# httpx-retries

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  codecov.yml  index.html  limits.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  publish.yml  test-suite.yml
api/: index.html
behaviour/: index.html
contributing/: index.html
differences_with_other_retry_libraries/: index.html
docs/: api.md  behaviour.md  contributing.md  differences_with_other_retry_libraries.md  faq.md  index.md  logging.md
docs/stylesheets/: extra.css
faq/: index.html
httpx_retries/: __init__.py  client.py  example.py  helpers.py  retry.py  transport.py
httpx_retry/: __init__.py  retry_transport.py
logging/: index.html
scripts/: build  check  install_ci  publish  test  test-fork
scripts/fork-compat/: sitecustomize.py
search/: search_index.json
tests/: conftest.py  test_helpers.py  test_retry.py  test_retry_transport.py  test_transport.py
